# internal/application/dtos/dtos.go
@@ -17,6 +17,17 @@ type ConnectionDTO struct {
 	CreatedAt string `json:"created_at"`
 }
 
+type DatabaseDTO struct {
+	Name string `json:"name"`
+}
+
+type TableDTO struct {
+	Name     string `json:"name"`
+	Type     string `json:"type"`
+	Size     int64  `json:"size"`
+	RowCount int64  `json:"row_count"`
+}
+
 func NewConnectionDTO(conn *connection.Connection) *ConnectionDTO {
 	return &ConnectionDTO{
 		ID:        conn.ID.String(),
@@ -27,5 +38,20 @@ func NewConnectionDTO(conn *connection.Connection) *ConnectionDTO {
 		Username:  conn.Username,
 		UpdatedAt: conn.UpdatedAt.Format(time.RFC3339),
 		CreatedAt: conn.CreatedAt.Format(time.RFC3339),
+	}
+}
+
+func NewDatabaseDTO(database connection.Database) *DatabaseDTO {
+	return &DatabaseDTO{
+		Name: database.Name,
+	}
+}
+
+func NewTableDTO(table connection.Table) *TableDTO {
+	return &TableDTO{
+		Name:     table.Name,
+		Type:     table.Type,
+		Size:     table.Size,
+		RowCount: table.RowCount,
 	}
 }
