# internal/transport/rest/routes.go
@@ -16,5 +16,6 @@ func (s *Server) connectionRoutes(r chi.Router) {
 	r.Get("/", s.listConnections)
 	r.Post("/", s.createConnection)
 	r.Get("/{connectionID}", s.findConnection)
-	// r.Get("/{connectionID}/databases", s.listDatabases)
+	r.Get("/{connectionID}/databases", s.listDatabases)
+	r.Get("/{connectionID}/databases/{databaseName}/tables", s.listTables)
 }
